fix images of projectsalign

--- a/src/components/Projects/projects-style.css
+++ b/src/components/Projects/projects-style.css
@@ -20,15 +20,16 @@ main{
 }
 
 #repo .card {
-    background-color: hsl(275, 82%, 89%);
+    background-color:  rgb(226, 196, 255);
     border: 0;
     border-radius: 8px;
+
    
 }
-/* img {
-	height: 140px;
-	width: 30px;
-} */
+.card img {
+
+	width: 90%;
+}
 .card-title,
 .card-text {
     padding-left: 1.25rem;
